@@ -27,7 +27,6 @@ import org.apache.shenyu.common.dto.PluginData;
 import org.apache.shenyu.common.dto.ProxySelectorData;
 import org.apache.shenyu.common.dto.RuleData;
 import org.apache.shenyu.common.dto.SelectorData;
-import org.apache.shenyu.common.exception.ShenyuException;
 import org.apache.shenyu.common.utils.GsonUtils;
 import org.apache.shenyu.sync.data.api.AuthDataSubscriber;
 import org.apache.shenyu.sync.data.api.DiscoveryUpstreamDataSubscriber;
@@ -36,7 +35,6 @@ import org.apache.shenyu.sync.data.api.PluginDataSubscriber;
 import org.apache.shenyu.sync.data.api.ProxySelectorDataSubscriber;
 import org.apache.shenyu.sync.data.api.SyncDataService;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
 import java.util.List;
@@ -161,11 +159,7 @@ public abstract class AbstractPathDataSyncService implements SyncDataService {
         if (EventType.DELETE.equals(eventType)) {
             final String realPath = updatePath.substring(DefaultPathConstants.META_DATA.length() + 1);
             MetaData metaData = new MetaData();
-            try {
-                metaData.setPath(URLDecoder.decode(realPath, StandardCharsets.UTF_8.name()));
-            } catch (UnsupportedEncodingException e) {
-                throw new ShenyuException(e);
-            }
+            metaData.setPath(URLDecoder.decode(realPath, StandardCharsets.UTF_8));
             unCacheMetaData(metaData);
             return;
         }
